feat: Update deployment configuration and rebuild frontend assets
      - Update backend_deploy.md to reflect successful Render deployment
      - Change CORS_ORIGIN to allow all origins in env example
      - Make API_BASE_URL configurable via VITE_API_URL environment variable
      - Rebuild frontend with new assets (index-C686URWK.js)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 PORT=5001
 MONGODB_URI=mongodb://localhost:27017/vibe-commerce
 MOCK_USER_ID=mock-user-123
-CORS_ORIGIN=http://localhost:5173
+CORS_ORIGIN=*
 USE_FAKE_STORE=false
